--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,3 +26,10 @@ jobs:
       run: dotnet build -c release --no-restore
     - name: Test
       run: dotnet test -c release --no-build --verbosity normal
+  
+    - name: Stop example.com
+      run: appcmd stop sites "demo"
+    - name: Publish Release
+      run: dotnet publish demo --configuration Release -o C:\\inetpub\\wwwroot\\demo
+    - name: Start demo
+      run: appcmd start sites "demo"  
