--- a/.github/workflows/mydeploy.yml
+++ b/.github/workflows/mydeploy.yml
@@ -1,9 +1,9 @@
 name: .NETdep
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
 jobs:
   build:
     runs-on: self-hosted
