nlog and serilogs merged into single project

--- a/Serilog/TestProject1/TestProject1.csproj
+++ b/Serilog/TestProject1/TestProject1.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Serilog\Serilog.csproj" />
+    <ProjectReference Include="..\Serilog\SerilogDemo.csproj" />
   </ItemGroup>
 
 </Project>
