reports related changes

--- a/Serilog/Serilog/appsettings.json
+++ b/Serilog/Serilog/appsettings.json
@@ -7,7 +7,10 @@
   },
   "AllowedHosts": "*",
   "Serilog": {
-    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
+    "Using": [
+      "Serilog.Sinks.File",
+      "Serilog.Sinks.Console"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -29,6 +32,13 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithThreadId", "WithMachineName" ]
+    "Enrich": [
+      "FromLogContext",
+      "WithThreadId",
+      "WithMachineName"
+    ]
+  },
+  "connectionStrings": {
+    "Developer48.dbo": "XpoProvider=MSSqlServer;data source=172.29.57.36;user id=;password=;initial catalog=eBizData48_Developer;Persist Security Info=true"
   }
 }
