--- a/Serilog/Serilog/SerilogDemo.csproj
+++ b/Serilog/Serilog/SerilogDemo.csproj
@@ -15,6 +15,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DevExpress.Reporting.Core" Version="23.1.4" />
+    <PackageReference Include="GrapeCity.ActiveReports" Version="17.1.2" />
+    <PackageReference Include="GrapeCity.ActiveReports.Core.DataProviders" Version="2.1.4" />
+    <PackageReference Include="GrapeCity.ActiveReports.Core.Rdl" Version="3.6.1" />
+    <PackageReference Include="GrapeCity.ActiveReports.Core.Rendering" Version="3.6.1" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.3" />
     <PackageReference Include="Serilog" Version="3.0.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
