--- a/NUnitTestProject/NUnitTestProject.csproj
+++ b/NUnitTestProject/NUnitTestProject.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Serilog\Serilog\SerilogDemo.csproj" />
+    <ProjectReference Include="..\SerilogDemo\SerilogDemo\SerilogDemo.csproj" />
   </ItemGroup>
 
 </Project>
